--- a/publishing/build.gradle
+++ b/publishing/build.gradle
@@ -37,6 +37,10 @@ publishing {
     repositories {
         maven {
             url "http://127.0.0.1:8080/repo"
+            credentials {
+                username 'username'
+                password 'password'
+            }
         }
     }
 }
